--- a/sign_up.html
+++ b/sign_up.html
@@ -20,7 +20,7 @@
             <div id="options">Contacts</div>
         </div>
         <div class="btn">
-            <a href="login.html">
+            <a href="index.html">
                 <button class="btn_signin">Sign In</button>
             </a>
             <a href="sign_up.html">
